Some more details for compiling and running it